[metadata]
name = pybresenham-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = A very simple implementation of Bresenham algorithm implementations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pybresenham
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.8
install_requires =
	numpy >= 1.25

[options.packages.find]
where = src
